# placebo

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  tools.yaml
examples/: chat.py  looker_nl_to_sql.py  mock_mcp_server.py  run_all_tests.py  test_1_token.py  test_2_gemini_basic.py  test_3_gemini_tools.py  test_mcp_client.py  test_setup.py
examples/safechain/: README.md  __init__.py  chat.py
lumi_llm/: __init__.py
lumi_llm/agents/: __init__.py  mcp_tool_agent.py  tool_agent.py
lumi_llm/auth/: __init__.py  idaas.py
lumi_llm/config/: __init__.py  settings.py
lumi_llm/mcp/: __init__.py  client.py  tool_converter.py
lumi_llm/providers/: __init__.py  base.py  gemini.py
